--- a/src/app/admin componeents/students/students.component.html
+++ b/src/app/admin componeents/students/students.component.html
@@ -517,17 +517,15 @@
               <div class="fc-month-view">
 
                 <table class="fc-row">
-                  <thead class="fc-head ">
-                    <tr class="container">
-                      <th class="fc-day-header "><span>sun</span></th>
-                      <th class="fc-day-header"><span>mon</span></th>
-                      <th class="fc-day-header"><span>tus</span></th>
-                      <th class="fc-day-header"><span>wen</span></th>
-                      <th class="fc-day-header"><span>thu</span></th>
-                      <th class="fc-day-header"><span>fry</span></th>
-                      <th class="fc-day-header"><span>sat</span></th>
-                    </tr>
-                  </thead>
+                  <ul class="weekdays">
+                    <li>Mo</li>
+                    <li>Tu</li>
+                    <li>We</li>
+                    <li>Th</li>
+                    <li>Fr</li>
+                    <li>Sa</li>
+                    <li>Su</li>
+                  </ul>
 
                   <ul class="days">
                     <li>31</li>
