--- a/src/app/admin componeents/students/students.component.html
+++ b/src/app/admin componeents/students/students.component.html
@@ -9,7 +9,7 @@
 <!-- Header end -->
 <section>
 
-  <div class="col-12 ">
+  <!-- <div class="col-12 "> -->
     <div class="row">
       <div class="col-4 ">
         <div class="card">
@@ -477,18 +477,18 @@
 
 
 
-  </div>
+  <!-- </div> -->
 
 
   <section>
 
-    <div class=" text-center">
+    <div class="col-12 ">
       <div class="row">
-        <div class="col card cal-m">
+        <div class=" widget col  mt-4 cal-m">
           Column
         </div>
 
-          <div class="widget col-4 cal-m">
+          <div class="widget col ms-2 mt-4 cal-m">
             <div class="calender-heding">
               <div class="cal-body mb-3">
                 <h6>Event Calender</h6>
@@ -568,7 +568,7 @@
           </div>
 
 
-          <div class="widget col-4 cal-m">
+          <div class="widget col  mt-4  cal-m">
             <div class="calender-heding">
               <div class="cal-body mb-3">
                 <h6>Notice Bord</h6>
