--- a/src/app/admin componeents/students/students.component.css
+++ b/src/app/admin componeents/students/students.component.css
@@ -80,7 +80,8 @@ margin-left: 20px;
 }
 
 .widget {
-  padding: 20px;
+  padding: 5px 20px 0px 20px;
+
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -222,7 +223,7 @@ body {
 }
 
 .days {
-  padding: 7px 0;
+  padding: 10px 0;
   background: #eee;
   /* margin-left: 20px; */
 }
