--- a/src/app/admin componeents/admin/admin.component.html
+++ b/src/app/admin componeents/admin/admin.component.html
@@ -142,14 +142,14 @@
         </span>
       </div>
       <canvas baseChart [data]="barChartData" [options]="barChartOptions" [plugins]="barChartPlugins"
-        [legend]="barChartLegend" [type]="'bar'" style="height: 300px;width: 350px;">
+        [legend]="barChartLegend" [type]="'bar'" style="height: 300px;width: 300px;">
       </canvas>
     </div>
 
     <!-- col-4 start -->
 
     <div class="widget col-3">
-      <div class="cal-body mb-3">
+  <div class="cal-body mb-3">
         <h6>Expenses</h6>
         <span><a href=""> <i class="bi bi-three-dots"></i></a>
         </span>
@@ -366,7 +366,7 @@
   <!-- end -->
 
   <!-- footer started -->
-  <div class="section row">
+  <div class="section1 row">
     <div class="col-3">
       <div class="dash-card dash-widget5 card-color1">
         <span class="float-center ms-5">
